LIN-4849/LIN-4868 Fix grid not showing row-stripes

--- a/vaadin-flow/core/src/main/resources/META-INF/resources/themes/linkki/vaadin-grid.css
+++ b/vaadin-flow/core/src/main/resources/META-INF/resources/themes/linkki/vaadin-grid.css
@@ -1,14 +1,11 @@
 /* Solid background for card sections */
-vaadin-grid,
-vaadin-grid::part(cell) {
-    background-image: var(--linkki-grid-background, var(--lumo-base-color));
+vaadin-grid {
+    --vaadin-grid-cell-background: var(--linkki-grid-background);
 }
 
-vaadin-grid::part(selected-row-cell) {
-    /* Reapply shadow DOM styling, otherwise :part(cell) would overwrite selection color */
-    background-image: linear-gradient(var(--_lumo-grid-selected-row-color), var(--_lumo-grid-selected-row-color));
+[theme~="card-sections"] .linkki-main-area linkki-section, .linkki-main-area [theme~="card-sections"] linkki-section, vaadin-dialog[theme~="card-sections"] linkki-section, vaadin-dialog [theme~="card-sections"] linkki-section, linkki-section[theme~="card"] {
+    --linkki-section-background: color-mix(in srgb, var(--lumo-base-color) 95%, rgb(from var(--lumo-contrast-5pct) r g b / 100%) 5%);
 }
-
 /* Header styling */
 vaadin-grid::part(header-cell) {
     min-height: var(--lumo-size-m);
